More more fixes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Lorenz</h1>
       <h2 class="project-tagline">Lorenz attractor</h2>
       <a href="https://github.com/nstrikos/lorenz" class="btn">View on GitHub</a>
-``````<a href="./lorenz/lorenz.html" class="btn">View live</a>
+``````<a href="./lorenz.html" class="btn">View live</a>
       <a href="https://github.com/nstrikos/lorenz/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/nstrikos/lorenz/tarball/master" class="btn">Download .tar.gz</a>
     </section>
